add requirements to setttings.ini and removed os from adx to test

--- a/settings.ini
+++ b/settings.ini
@@ -39,7 +39,7 @@ status = 3
 user = equinor
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = azure.kusto.data==6.0.0 azure-keyvault-secrets==4.10.0
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
